--- a/blogPost.html
+++ b/blogPost.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./static/css/common.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css">
     <link rel="stylesheet" type="text/css" href="./static/css/blogPost.css">
     <title>Blog Post</title>
 </head>
@@ -16,7 +15,7 @@
         <p class="h-1 color-black-blue">Blog Title</p>
     </header>
     <section class="container one-row-grid" id="authorInfo">
-        <p class="h-3 color-secondary p-underline">Author Info</p>
+        <u class="h-3 color-secondary">Author Info</u>
         <div class="authorInfo-wrapper">
             <img class="image-round avatar" src="./static/assets/avatar.png">
             <p class="p-bold color-green">Author Name: QuangTN14</p>
@@ -26,7 +25,7 @@
         </div>
     </section>
     <section class="container" id="blogContent">
-        <p class="h-3 color-secondary p-underline">Content</p>
+        <u class="h-3 color-secondary">Content</u>
         <p class="blog-block">
             Animal Charity Evaluators (ACE) has again named Sinergia Animal as a recommended charity, meaning we have
             made some of the greatest gains for animals in the whole global animal protection movement. ACE is an
@@ -75,7 +74,7 @@
         </p>
     </section>
     <section class="container one-row-grid" id="shareBox">
-        <p class="h-3 color-secondary p-underline">Share this post now</p>
+        <u class="h-3 color-secondary">Share this post now</u>
         <a class="link" href="https://twitter.com/">Twitter</a>
         <a class="link" href="https://www.facebook.com/sharer/sharer.php?u=example.org">Facebook</a>
         <a class="link" href="https://www.linkedin.com/">LinkedIn</a>
