--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./static/css/common.css">
-    <link rel="stylesheet" type="text/css" href="./static/css/layout.css">
+    <link rel="stylesheet" type="text/css" href="./static/css/main.css">
     <link rel="stylesheet" type="text/css" href="./static/css/homepage.css">
     <title>Blog Homepage</title>
 </head>
@@ -28,46 +27,69 @@
     <section class="container contentBox">
         <div class="blogBox-wrapper">
             <div class="blogBoxCard card">
-                <p class="p-bold color-green">World</p>
+                <b class="color-green">World</b>
                 <p class="h-2 blog-title">New World Blog Post</p>
-                <p class="p-bold color-secondary">Nov 20</p>
-                <img class="image" src="static/assets/blogImage/world.jpg">
-                <p class="p-normal description">This is blog about new event in over the World</p>
-                <a class="link" href="/blogPost.html">Continue reading</a>
+                <i class="p-bold color-secondary">Nov 20</i>
+                <figure>
+                    <img class="image" src="static/assets/blogImage/world.jpg">
+                    <figcaption>
+                        <q class="p-normal description">This is blog about new event in over the World</q>
+                    </figcaption>
+                </figure>
+                <a class="link button-primary" href="blogPost.html">Continue reading</a>
             </div>
             <div class="blogBoxCard card">
-                <p class="p-bold color-secondary">Animal</p>
+                <b class="color-secondary">Animal</b>
                 <p class="h-2 blog-title">Animal Blog Post</p>
-                <p class="p-bold color-secondary">Sep 01</p>
-                <img class="image" src="static/assets/blogImage/animal.jpg">
-                <div class="p-normal description">We live on a planet with millions of species of animals -and a rich,
-                    diverse collection of known wildlife, and yet new species are being identified seemingly every day —
-                    both living and extinct</div>
-                <a class="link" href="/blogPost.html">Continue reading</a>
+                <i class="p-bold color-secondary">Sep 01</i>
+                <figure>
+                    <img class="image" src="static/assets/blogImage/animal.jpg">
+                    <figcaption>
+                        <q class="p-normal description">We live on a planet with millions of species of animals -and a
+                            rich,
+                            diverse collection of known wildlife, and yet new species are being identified seemingly
+                            every
+                            day —
+                            both living and extinct</q>
+                    </figcaption>
+                </figure>
+                <a class="link button-primary" href="blogPost.html">Continue reading</a>
             </div>
             <div class="blogBoxCard card">
-                <p class="p-bold color-green">Nature</p>
+                <b class="color-green">Nature</b>
                 <p class="h-2 blog-title">Nature Blog Post</p>
-                <p class="p-bold color-secondary">May 24</p>
-                <img class="image" src="static/assets/blogImage/nature.jpg">
-                <p class="p-normal description">This is blog nature in over the World</p>
-                <a class="link" href="/blogPost.html">Continue reading</a>
+                <i class="p-bold color-secondary">May 24</i>
+                <figure>
+                    <img class="image" src="static/assets/blogImage/nature.jpg">
+                    <figcaption>
+                        <q class="p-normal description">This is blog nature in over the World</q>
+                    </figcaption>
+                </figure>
+                <a class="link button-primary" href="blogPost.html">Continue reading</a>
             </div>
             <div class="blogBoxCard card">
-                <p class="p-bold color-green">People</p>
+                <b class="color-green">People</b>
                 <p class="h-2 blog-title">People Blog Post</p>
-                <p class="p-bold color-secondary">Jan 01</p>
-                <img class="image" src="static/assets/blogImage/people.jpeg">
-                <p class="p-normal description">This is social event in over the World</p>
-                <a class="link" href="/blogPost.html">Continue reading</a>
+                <i class="p-bold color-secondary">Jan 01</i>
+                <figure>
+                    <img class="image" src="static/assets/blogImage/people.jpeg">
+                    <figcaption>
+                        <q class="p-normal description">This is social event in over the World</q>
+                    </figcaption>
+                </figure>
+                <a class="link button-primary" href="blogPost.html">Continue reading</a>
             </div>
             <div class="blogBoxCard card">
-                <p class="p-bold color-red">Economy</p>
+                <b class="color-red">Economy</b>
                 <p class="h-2 blog-title">Economy Blog Post</p>
-                <p class="p-bold color-secondary">Aug 11</p>
-                <img class="image" src="static/assets/blogImage/economy.jpg">
-                <p class="p-normal description">This is blog about economy in over the World</p>
-                <a class="link" href="/blogPost.html">Continue reading</a>
+                <i class="color-secondary">Aug 11</i>
+                <figure>
+                    <img class="image" src="static/assets/blogImage/economy.jpg">
+                    <figcaption>
+                        <q class="p-normal description">This is blog about economy in over the World</q>
+                    </figcaption>
+                </figure>
+                <a class="link button-primary" href="blogPost.html">Continue reading</a>
             </div>
         </div>
     </section>
